# KeyboardPet

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DESIGN.md  LICENSE  Package.swift  README.md  README.zh-CN.md  build_app.sh  package_dmg.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  tauri-build.yml
Resources/: AppIcon.icns  Info.plist
Sources/KeyboardPet/: main.swift
Sources/KeyboardPet/App/: KeyboardPetApp.swift  LaunchAtLogin.swift  MenuBarManager.swift  PetController.swift  PetWindow.swift
Sources/KeyboardPet/Core/: ExperienceManager.swift  KeyboardMonitor.swift  MetricsEngine.swift  PetSettings.swift  PetState.swift  PetStateMachine.swift
Sources/KeyboardPet/Data/: DataExporter.swift  StatsStore.swift  UserDefaults+Extensions.swift
Sources/KeyboardPet/Tools/: GIFRenderer.swift
Sources/KeyboardPet/View/: ClawdSpriteView.swift  ClawdSprites.swift  MenuBarIcon.swift  PetAnimations.swift  PetView.swift  PixelFont.swift  SettingsView.swift  StatsPanel.swift
Tests/KeyboardPetTests/: ExperienceManagerTests.swift  MetricsEngineTests.swift  PetStateMachineTests.swift  StatsDateTests.swift  TestSupport.swift
Tools/: GenerateAppIcon.swift  GenerateClawdSprites.swift  GenerateMenuBarIcon.swift  generate_app_icon.sh  render_state_gifs.sh
Tools/demo_video/: README.md  build.sh  render_pet_frames.py  render_scene_cards.py
docs/: cross-platform-plan.md
tauri/: README.md  package.json
tauri/src/: index.html  main.js  panel.css  settings.css  settings.html  settings.js  stats.html  stats.js  styles.css
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/icons/: icon.icns
tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  persist.rs  runtime.rs
tauri/src-tauri/src/core/: experience.rs  key_event.rs  metrics.rs  mod.rs  settings.rs  state_machine.rs  stats_store.rs
tauri/src-tauri/src/platform/: keyboard.rs  mod.rs
