[package]
name = "keyboardpet"
version = "0.1.0"
description = "KeyboardPet — a cross-platform desktop pet driven by your real keyboard activity."
authors = ["xionger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (required on Windows).
name = "keyboardpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
