[package]
name = "keyboardpet"
version = "0.1.0"
description = "KeyboardPet — a cross-platform desktop pet driven by your real keyboard activity."
authors = ["xionger"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix keeps the lib name distinct from the bin name (required on Windows).
name = "keyboardpet_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "macos-private-api", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["clock"] }
# Cross-platform global key listener: WH_KEYBOARD_LL on Windows, CGEventTap on
# macOS — internally. We only ever read the key variant (for delete detection),
# never the produced character, preserving the privacy invariant.
rdev = "0.5"
# Remember the pet window position across launches.
tauri-plugin-window-state = "2"
# Launch at login (registry Run key on Windows, LaunchAgent on macOS).
tauri-plugin-autostart = "2"

[target.'cfg(target_os = "macos")'.dependencies]
# Prompts for / checks the macOS Accessibility permission the listener needs.
macos-accessibility-client = "0.0.2"
